Fix spacing-6

--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -5,11 +5,6 @@
   border-bottom: 4px solid #1aa6ae;
 }
 
-.container {
-  width: 90%;
-  margin: 0 auto;
-}
-
 /* ===== NAVIGATION ===== */
 .nav {
   display: flex;
