--- a/scss/vars/_variables.scss
+++ b/scss/vars/_variables.scss
@@ -1,11 +1,3 @@
-$primary-color: #3498db;
-$background-color: #f4f4f4;
-$text-color: #222;
-
-$breakpoint-md: 640px;
-
-
-
 // ============================================================
 // COLORS
 // ============================================================
